--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
     "aws-lambda": "^1.0.7",
+    "dotenv": "^16.4.5",
     "joi": "^17.12.1",
     "mongoose": "^8.1.1",
     "reflect-metadata": "^0.1.13",
