--- a/serverless.dev.yml
+++ b/serverless.dev.yml
@@ -2,13 +2,15 @@ service: posts-service
 
 provider:
   name: aws
-  region: sa-east-1 # --> usar la q sea necesaria
+  region: sa-east-1
   stage: dev
+  environment:
+    SERVER_MODE: serverless
 
 package:
   patterns:
-    - '!**/**' # <-- ignoro todo por defecto
-    - dist/main.js # <-- solamente incluye la carpeta dist para hacer el empaquetado
+    - '!**/**'
+    - dist/main.js
 
 functions:
   main:
@@ -26,3 +28,8 @@ functions:
 
 plugins:
   - serverless-offline
+
+custom:
+  serverless-offline:
+    httpPort: 4000
+    lambdaPort: 4002
