--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 NODE_ENV=dev
 SERVER_MODE=http
-MONGO_URI=mongodb://localhost:27017/
+MONGO_URI=mongodb://localhost:27017/posts
+AUTHORS_API_URL=http://localhost:4010/authors
+
+HTTP_PORT=4000
 DB_PORT=27017
