--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 NODE_ENV=dev
 SERVER_MODE=http
 MONGO_URI=mongodb://localhost:27017/posts
-AUTHORS_API_URL=http://localhost:4010/authors
 
+# PROD
+AUTHORS_FUNCTION_NAME=
+API_GATEWAY_ID=
+
+# DEV
+AUTHORS_API_URL=http://localhost:4010/authors
 HTTP_PORT=4000
 DB_PORT=27017
