--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
+# ENVIRONMENT
 NODE_ENV=dev
 SERVER_MODE=http
+
+# DB
 MONGO_URI=mongodb://localhost:27017/posts
+
+# AWS USER
+AWS_S3_ACCESS_KEY=
+AWS_S3_SECRET_KEY=
+
+# AWS BUCKET
+AWS_BUCKET_NAME=
+AWS_BUCKET_REGION=
 
 # PROD
 AUTHORS_FUNCTION_NAME=
