--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.521.0",
     "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/client-sqs": "^3.525.0",
     "@codegenie/serverless-express": "^4.13.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
