--- a/serverless.yml
+++ b/serverless.yml
@@ -27,13 +27,14 @@ functions:
       - httpApi:
           path: '/posts/{proxy+}'
           method: ANY
+      - sqs: arn:aws:sqs:sa-east-1:159107743549:posts-queue.fifo
     environment:
-      MONGO_URI: ${env:MONGO_URI}
       NODE_ENV: prod
       SERVER_MODE: serverless
-      AUTHORS_FUNCTION_NAME: ${env:AUTHORS_FUNCTION_NAME}
+      MONGO_URI: ${env:MONGO_URI}
       AWS_BUCKET_NAME: ${env:AWS_BUCKET_NAME}
       AWS_BUCKET_REGION: ${env:AWS_BUCKET_REGION}
+      AUTHORS_QUEUE_URL: ${env:AUTHORS_QUEUE_URL}
 
 plugins:
   - serverless-offline
