--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.525.0",
-    "@aws-sdk/client-sqs": "^3.525.0",
+    "@aws-sdk/client-sns": "^3.535.0",
     "@codegenie/serverless-express": "^4.13.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
