--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.540.0",
     "@aws-sdk/client-s3": "^3.525.0",
     "@aws-sdk/client-sns": "^3.535.0",
     "@codegenie/serverless-express": "^4.13.0",
