[feat] create script to deploy lambda

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:down": "docker compose down",
     "sls:dev": "pnpm build --webpack && sls offline --config serverless.dev.yml",
     "sls:prod": "pnpm build --webpack && sls deploy",
+    "lambda:update": "pnpm build --webpack && zip -r -j dist.zip dist && aws lambda update-function-code --zip-file fileb://dist.zip",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
