[doc] update doc on readme file

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-NODE_ENV=dev
-SERVER_MODE=http
 MONGO_URI=mongodb://localhost:27017/posts
 
-# PROD
-AUTHORS_FUNCTION_NAME=
+# ONLY FOR PROD
 API_GATEWAY_ID=
+AUTHORS_FUNCTION_NAME=
 
-# DEV
+# ONLY FOR DEV
+NODE_ENV=dev
+SERVER_MODE=http
 AUTHORS_API_URL=http://localhost:4010/authors
 HTTP_PORT=4000
 DB_PORT=27017
