--- a/serverless.yml
+++ b/serverless.yml
@@ -29,6 +29,7 @@ functions:
           method: ANY
     environment:
       MONGO_URI: ${env:MONGO_URI}
+      AUTHORS_FUNCTION_NAME: ${env:AUTHORS_FUNCTION_NAME}
       NODE_ENV: prod
       SERVER_MODE: serverless
 
