[doc] update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-# ENVIRONMENT
-NODE_ENV=dev
-SERVER_MODE=http
-
-# DB
 MONGO_URI=mongodb://localhost:27017/posts
 
-# AWS BUCKET
+# ONLY FOR PROD
+API_GATEWAY_ID=
 AWS_BUCKET_NAME=
 AWS_BUCKET_REGION=
+SQS_QUEUE_ARN=
+SNS_TOPIC_ARN=
 
-# PROD
-AUTHORS_FUNCTION_NAME=
-API_GATEWAY_ID=
-
-# DEV
-AUTHORS_API_URL=http://localhost:4010/authors
+# ONLY FOR DEV
+NODE_ENV=dev
+SERVER_MODE=http
 HTTP_PORT=4000
 DB_PORT=27017
